Now JDK21 minimum.